--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "start-watch": "nodemon index.js",
-    "dev": "concurrently \"yarn run start-watch\" \"cd ../client && yarn start\"",
+    "dev": "concurrently \"npm run start-watch\" \"cd ../client && npm start\"",
     "dev2": "concurrently \"yarn run start-watch\" \"cd ../client && npm start\"",
     "dev3": "nodemon index.js"
   },
